# django-eidas-specific-node

./: .git-blame-ignore-revs  .travis.yml  CHANGELOG.md  COPYRIGHT  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-test.yml
docker/: Dockerfile  Dockerfile.specific_proxy_service  README.md  build.sh  docker-compose.yml  specific_connector_cfg.py  specific_proxy_service_cfg.py
eidas_node/: __init__.py  attributes.py  constants.py  datamodels.py  errors.py  models.py  saml.py  settings.py  utils.py  xml.py
eidas_node/connector/: __init__.py  apps.py  settings.py  urls.py  views.py
eidas_node/connector/demo/: __init__.py  urls.py  views.py
eidas_node/connector/templates/eidas_node/connector/: base.html  citizen_country_selector.html  connector_response.html  country_selector.html  service_provider_request.html
eidas_node/cznic/: __init__.py
eidas_node/cznic/static/eidas_node/css/: screen.css
eidas_node/cznic/templates/eidas_node/connector/: base.html
eidas_node/cznic/templates/eidas_node/proxy_service/: base.html
eidas_node/proxy_service/: __init__.py  apps.py  settings.py  urls.py  views.py
eidas_node/proxy_service/cznia/: __init__.py  urls.py  views.py
eidas_node/proxy_service/static/eidas_node/proxy_service/: formautosubmit.js
eidas_node/storage/: __init__.py  base.py  ignite.py  utils.py
eidas_node/tests/: __init__.py  constants.py  settings.py  softhsm_setup.py  test_datamodels.py  test_errors.py  test_models.py  test_saml.py  test_settings.py  test_storage.py  test_utils.py  test_xml.py  test_xml_pkcs11.py  urls.py  warnings.py
eidas_node/tests/connector/: test_demo_views.py  test_settings.py  test_views.py
eidas_node/tests/data/: cert.pem  key.pem  light_request.xml  light_request_minimal.xml  light_response.xml  light_response_failure.xml  nia-test-cert.pem  nia_test_response.xml  nia_test_response_decrypted_verified.xml  saml_request.xml  saml_request_loa.xml  saml_request_minimal.xml  saml_request_signed.xml  saml_requests_mandatory_attributes_persistent.xml  saml_requests_mandatory_attributes_unspecified.xml  saml_requests_natural_person_attributes_persistent.xml  saml_response.xml  saml_response_decrypted.xml  saml_response_encrypted.xml  saml_response_failed.xml  saml_response_failed_nia.xml  saml_response_failed_nia_decrypted.xml  saml_response_failed_nia_fixed.xml  saml_response_failed_unsupported_sub_status.xml  saml_response_failed_version_mismatch.xml  saml_response_from_light_response.xml  saml_response_from_light_response_failed.xml  saml_response_from_light_response_minimal.xml  saml_response_from_light_response_version_mismatch.xml  signed_failed_response.xml  signed_response.xml  signed_response_1.2.35.xml  signed_response_and_assertion.xml  signed_response_and_assertion.xml_1.2.35.xml  wrong-cert.pem  wrong-key.pem
eidas_node/tests/proxy_service/: test_cznia_views.py  test_settings.py  test_views.py
eidas_proxy_service/: __init__.py  apps.py  models.py  urls.py  views.py
eidas_proxy_service/tests/: __init__.py  settings.py
samples/: connector_settings.py  proxy_service_settings.py
(+7 files in other folders)
