[metadata]
name = eidas_node
version = 0.10.0
url = https://github.com/CZ-NIC/django-eidas-specific-node
author = Jiří Janoušek
author_email = jiri.janousek@nic.cz
description = "An implementation of eIDAS-Node 2.3.x Specific Connector and Proxy Service."
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = ~=3.8
install_requires =
    django >=2.2,<2.3
    django-app-settings >=0.7.1
    lxml
    xmlsec

[options.extras_require]
ignite =
    pyignite
quality =
    ruff
    mypy
tests =
    freezegun

[mypy]
check_untyped_defs = True

[mypy-appsettings.*]
ignore_missing_imports = True

[mypy-django.*]
ignore_missing_imports = True

[mypy-freezegun.*]
ignore_missing_imports = True

[mypy-lxml.*]
ignore_missing_imports = True

[mypy-pyignite.*]
ignore_missing_imports = True

[mypy-xmlsec.*]
ignore_missing_imports = True
